--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-5 col-xs-12">
-            <p class="float-right">Designed and Developed by <a href="http://uideck.com" rel="nofollow">UIdeck</a></p>
+            <p class="float-right">Designed and Developed by <a href="javasript:void(0);" rel="nofollow">vionyx</a></p>
           </div> 
         </div>
       </div>
