--- a/index.html
+++ b/index.html
@@ -831,14 +831,14 @@
               <img src="assets/img/logo.png" alt="">
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-xs-12">     
+     <!--     <div class="col-lg-4 col-md-4 col-xs-12">     
             <div class="social-icon text-center">
               <a class="facebook" href="#"><i class="lni-facebook-filled"></i></a>
               <a class="twitter" href="#"><i class="lni-twitter-filled"></i></a>
               <a class="instagram" href="#"><i class="lni-instagram-filled"></i></a>
               <a class="linkedin" href="#"><i class="lni-linkedin-filled"></i></a>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-4 col-md-5 col-xs-12">
             <p class="float-right">Designed and Developed by <a href="javasript:void(0);" rel="nofollow">vionyx</a></p>
           </div> 
