--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-3 col-xs-12">
             <div class="footer-logo">
-              <img src="assets/img/logo.png" width="200px" alt="">
+              <img src="assets/img/logo.png" alt="vionyx" style="width:50% !important;">
             </div>
           </div>
      <!--     <div class="col-lg-4 col-md-4 col-xs-12">     
