--- a/index.html
+++ b/index.html
@@ -800,19 +800,19 @@
                   <div class="contact-icon">
                     <i class="lni-map-marker"></i>
                   </div>
-                  <p>ADDRESS: 28 Green Tower, New York City, USA</p>
+                  <p>ADDRESS: Pune, Maharashtra, India</p>
                 </div>
                 <div class="single-contact">
                   <div class="contact-icon">
                     <i class="lni-envelope"></i>
                   </div>
-                  <p><a href="#">Email:  contact@stuck.com</a></p>
+                  <p><a href="#">Email:  hellovionyx@gmail.com</a></p>
                 </div>
                 <div class="single-contact">
                   <div class="contact-icon">
                     <i class="lni-phone-handset"></i>
                   </div>
-                  <p><a href="#">Phone:  +84 846 250 592</a></p>
+                  <p><a href="#">Phone:  +91 8554 98 8202</a></p>
                 </div>
               </div>
             </div>
