--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
         <div class="row contact-form-area wow fadeInUp" data-wow-delay="0.4s">          
           <div class="col-md-6 col-lg-6 col-sm-12">
             <div class="contact-block">
-              <form id="contactForm">
+              <form id="contactForm" action="https://hellovionyx@gmail.com" method="POST">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
